# procgen

./: CMakeLists.txt  README.md
include/: camera.hpp  noise.hpp
shaders/: noise_quad.frag  noise_quad.vert  terrain.frag  terrain.vert
src/: main.cpp
